feat: InsertNewUser
