# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api
 definitions:
-  auth.SignUpUserPayload:
+  config.SignUpUserPayload:
     properties:
       email:
         type: string
@@ -36,7 +36,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/auth.SignUpUserPayload'
+          $ref: '#/definitions/config.SignUpUserPayload'
       responses:
         "200":
           description: OK
